fix adaptive and add overflow:hidden

--- a/client/src/commponents/intro/Intro.css
+++ b/client/src/commponents/intro/Intro.css
@@ -244,6 +244,7 @@
   .intro-fixed-container {
     width: calc(100% - 24px);
     max-width: 350px;
+    margin-top: 100px;
     padding: 24px 20px;
     height: auto;
     min-height: 420px;
